tests/samples/expression-invalid-3/error.txt
Invalid number "4.25.8" found on line 2 at index 49.

1|// error: 4.25.8
2|        {(na9me_.a().pm["[]"][mop]["mop'op"].mm(4.25.8,'oplm').tty + 9  + (mmo[lm])){}}
                                                  ^
3|
